# xsra

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
src/: main.rs  output.rs
src/cli/: mod.rs  recode.rs
src/describe/: mod.rs
src/dump/: mod.rs
src/prefetch/: mod.rs
src/recode/: mod.rs
tests/: dump.rs  prefetch.rs  recode.rs
