[package]
name = "xsra"
version = "0.2.27"
edition = "2021"
license = "MIT"
authors = ["Noam Teyssier <noam.teyssier@arcinstitute.org>"]
description = "A performant and storage-efficient CLI tool to extract sequences from an SRA archive with support for FASTA, FASTQ, and BINSEQ outputs."
repository = "https://github.com/arcinstitute/xsra"
categories = ["command-line-utilities", "science::bioinformatics"]
keywords = ["ncbi", "binseq", "SRA", "genomics", "fasterq-dump"]


[dependencies]
anyhow = "1.0.102"
binseq = "0.9.0"
clap = { version = "4.5.60", features = ["derive"] }
env_logger = "0.11.9"
futures = "0.3.32"
gzp = "2"
indicatif = "0.18.4"
log = { version = "0.4.29", features = ["kv"] }
ncbi-vdb-sys = "0.1.7"
num_cpus = "1.17.0"
parking_lot = "0.12.5"
reqwest = { version = "0.13.2", default-features = false, features = [
    "blocking",
    "stream",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["rt", "rt-multi-thread"] }
zstd = { version = "0.13.3", features = ["zstdmt"] }

[dev-dependencies]
assert_cmd = "2.1.2"
predicates = "3.1.4"
mockito = "1.7.2"
tempfile = "3.26.0"

[dev-dependencies.tokio]
version = "1.50.0"
features = ["rt", "rt-multi-thread", "macros", "test-util"]
